--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Document</title>
 </head>
-<body>
+<body style="font-size: 50px;">
    <h1>موقع سحر ابراهيم دسوقي </h1> 
    <h2>(ام محمد مدحت)</h2>
    <h2>:ارقام الهاتف</h2>
