--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <title>Document</title>
 </head>
-<body style="font-size: 50px;">
-   <h1>موقع سحر ابراهيم دسوقي </h1> 
-   <h2>(ام محمد مدحت)</h2>
+<body>
+   <h1>موقع مدحت كمال الدين</h1> 
+   <h2>(الشرييييييف)</h2>
    <h2>:ارقام الهاتف</h2>
    <ol>
-    <li>01028834649</li>
-    <li>01151299245</li>
+    <li>01000037446</li>
+    <li>01157067003</li>
    </ol>
-   <img src="WhatsApp Image 2025-10-17 at 00.20.56_8206fb78.jpg"  width="500" >
+   <img src="WhatsApp Image 2025-10-17 at 00.53.05_949ce814.jpg" alt="" width="500" >
    <br>
-   <ul style="list-style: none;">
-   <li><a href="https://www.facebook.com/share/1ARpd6T9cL/" target="_blank">Facbook </a></li>
-   <li style="margin-top: 20px;"><a href="https://i.ytimg.com/vi/oMybXmA7TEA/hqdefault.jpg" target="_blank" rel="noopener noreferrer">اضغط هنا</a></li>
+   <ul>
+   <li><a href="https://www.facebook.com/share/1BRyQaQi94/" target="_blank">Facbook </a></li>
+   <li><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEAqjjyG9ehySvx2KI-Xp03x7UuCtN_gMGgg&s" target="_blank" rel="noopener noreferrer">اضغط هنا</a></li>
    </ul>
 </body>
 </html>
